--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,5 +18,5 @@ jobs:
         run: |
           # AppCenter'a yükleme komutlarını burada çalıştırın.
           # Örneğin:
-          /bin/bash appcenter login --token 5924f27c13f242f8cc58cd5c8b0438ba8a4ca874
-          /bin/bash appcenter apps list
+          /bin/sh appcenter login --token 5924f27c13f242f8cc58cd5c8b0438ba8a4ca874
+          /bin/sh appcenter apps list
